--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 
-    <header class="container-fluid text-center text-white bg-dark p2">
+    <header class="container-fluid text-center text-white bg-dark">
         <h1>Weather Dashboard</h1>
     </header>
 
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 bg-light">
-                <h5 class="mt-1">Search for a City:</h5>
+                <h2 class="mt-1">Search for a City:</h2>
                 <div class="input-group mb-3">
                     <input id="enter-city" type="text" class="form-control" placeholder="Enter a city" aria-label="Enter a city">
                     <div class="input-group-append">
@@ -59,5 +59,8 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
 </body>
 </html>
