--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link href="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
 
-    <header class="container-fluid text-center text-white bg-dark">
-        <h1>Weather Dashboard</h1>
-    </header>
 
+    <div class="container-fluid bg-dark p-3">
+        <div class="container">
+            <h1 class="text-center text-white">Weather Dashboard</h1>
+    </div>
+    </div>
+
+    <!-- Start container -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3 bg-light">
+            <div class="col-lg-3 bg-light pt-3 pb-3">
                 <h2 class="mt-1">Search for a City:</h2>
                 <div class="input-group mb-3">
                     <input id="enter-city" type="text" class="form-control" placeholder="Enter a city" aria-label="Enter a city">
@@ -26,9 +30,18 @@
                         </button>
                     </div>
                 </div>
+
                 <button class="btn btn-primary mb-3" type="button" id="clear-history">Clear history</button>
                 <form id="history"></form>
             </div>
+
+            <!-- List under Cities -->
+            <div class="card"> 
+                <ul class="list-group">
+                </ul>
+            </div> 
+
+            <!-- Start second column - Current Weather -->
             <div class="col-lg-9">
                 <div class="row mr-0">
                     <div class="col-lg-11 card m-3 d-none" id="today-weather">
@@ -42,6 +55,8 @@
                         </div>
                     </div>
                 </div>
+
+            <!-- Start 5 day weather forecast -->    
                 <div class="row d-none" id="fiveday-header">
                     <div class="col-12">
                         <h3>5-Day Forecast</h3>
@@ -59,8 +74,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    
 </body>
 </html>
