update to js to add current and five day

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Weather Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    
 </head>
 <body>
-
 
     <div class="container-fluid bg-dark p-3">
         <div class="container">
@@ -43,7 +43,7 @@
             <!-- Start second column - Current Weather -->
             <div class="col-lg-9">
                 <div class="row mr-0">
-                    <div class="col-lg-11 card m-3 d-none" id="today-weather">
+                    <div class="col-lg-11 card m-3" id="today-weather">
                         <div class="card-body">
                             <h2 id="city-name" class="city-name align-middle"></h2>
                             <h3 id="date-display"></h3>
@@ -57,7 +57,7 @@
                 </div>
 
             <!-- Start 5 day weather forecast -->    
-            <div class="row d-none" id="fiveday-header">
+            <div class="row" id="fiveday-header">
                 <div class="col-12 card">
                     <div class="card-body">
                         <h2 id="cityName"></h2>
