Remove div so that dashboard shows correctly

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Start container -->
-    <div class="container-fluid sidebar">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 bg-light pt-3 pb-3">
                 <h2 class="mt-1">Search for a City:</h2>
@@ -35,11 +35,6 @@
                 <form id="history"></form>
             </div>
 
-            <!-- List under Cities -->
-            <div class="card"> 
-                <ul class="list-group">
-                </ul>
-            </div> 
 
             <!-- Start second column - Current Weather -->
             <div class="col-lg-9">
@@ -57,7 +52,7 @@
                 </div>
 
                 <div class="row" id="fiveday-header">
-                    <div class="col-12">
+                    <div class="col-9">
                         <h3  id="forecast">5-Day Forecast</h3>
                     </div>
                 </div>
@@ -92,7 +87,10 @@
                         <div class="temp"></div>
                         <div class="humid"></div>
                     </div>
-                </div>                
+                </div>    
+            </div>     
+            </div>       
+            </div>
     
     <script src="script.js"></script>
     
