--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Weather Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="" href="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
 </head>
 <body>
@@ -42,6 +42,7 @@
                     <div class="col-lg-11 card m-3" id="today-weather">
                         <div class="card-body">
                             <h2 id="city-name" class="city-name align-middle"></h2>
+                            <span class="px-3" id="currentdate">MM/DD/YY</span>
                             <img id="weather-icon" alt="weather icon">
                             <p id="temperature">Temperature: </p>
                             <p id="humidity">Humidity: </p>
