--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         </button>
                     </div>
                 </div>
+                <div class="list-group"></div>
                 <button class="btn btn-primary mb-3" type="button" id="clear-history">Clear history</button>
                 <form id="history"></form>
             </div>
